--- a/코딩테스트 준비 및 개론.md
+++ b/코딩테스트 준비 및 개론.md
@@ -7,3 +7,13 @@
   - ICPC : 부분 점수가 존재하는 것이 아닌, 5문제중 1문제 맞춤. 이런식으로 반영.
     - 내가 풀 수 있는 문제를 딱딱 집어서 먼저 풀 것!
   - 기업 별로 어떤 채점방식을 쓰고 있는지 알아야 한다.
+
+## 각종 테크닉
+- 정답을 쉽게 확인할 수 있는 데이터를 만들어라.
+- Boundary Case를 확인할 것.
+- Stepwise Requirement
+  1. Straightforward : 문제에서 요구하는 것을 무식하게 만들어봐라. 대부분 시간초과가 날 것이다.
+  2. 그 이후에 개선을 할 것
+- C/C++(STL(Standard Template Library))
+  - 동적할당에 있어서는 STL의 Vector을 이용하자!
+- Shortest Path, MST, Cut_vertex, DFS/BFS, Suffix Array 등의 알고리즘 모듈이 손에 익어야한다!(약 20개 정도)
